tests/basic/eq/eq_int_03.pan.out
tests/basic/eq/eq_int_03.pan:4:1-3: error: unable to verify type of f2
tests/basic/eq/eq_int_03.pan:7:1-3: error: unable to verify type of f4