tests/basic/eq/eq_int_03.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }

f2 : {v:bool|v=true}
f2 = eq 1 2

f4 : {v:bool|false}
f4 = eq 1 2
